--- a/assets/css/mm_ui.css
+++ b/assets/css/mm_ui.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+/* 初始化 */
+*,figure{ padding: 0; margin: 0; }
+li {list-style: none; }
+a { text-decoration: none; }
+span ~ i { margin-left: .5rem; }
+button:focus{ outline: none; }
+
 /* 对齐 */
 .fr { float: right !important; }
 .fl { float: left !important; }
@@ -115,6 +122,7 @@
 .box { position:absolute; z-index:3; }
 .mask { position:fixed; z-index:5; }
 .modal {position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); border-radius:0.25rem; width:calc(100 - 0.5rem); max-width:20rem; z-index:6;}
+.warp { width: 100%; min-width: 65rem; max-width: 81rem; margin: 0 auto; }
 
 /* 字体大小 */
 body { font-size: 0.875rem; }
