--- a/assets/css/mm_ui.css
+++ b/assets/css/mm_ui.css
@@ -77,11 +77,15 @@ button:focus{ outline: none; }
 .b-rb {border-bottom-right-radius:0.25rem !important;}
 .b-rt {border-top-right-radius:0.25rem !important;}
 
+/* 栅格间距 */
+.space { margin: -.5rem; }
+.space>*>*{ margin: .5rem; }
 
 /* 自动栅格 */
-.[class*=grid-] {display:flex;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;-webkit-flex-direction:row;-moz-flex-direction:row;-ms-flex-direction:row;-o-flex-direction:row;flex-direction:row;-webkit-flex-wrap:wrap;-moz-flex-wrap:wrap;-ms-flex-wrap:wrap;-o-flex-wrap:wrap;flex-wrap:wrap;-webkit-align-items:center;-moz-align-items:center;-ms-align-items:center;-o-align-items:center;align-items:center;text-align:center;-webkit-justify-content:space-between;-moz-justify-content:space-between;-ms-justify-content:space-between;-o-justify-content:space-between;justify-content:space-between;}
-.[class*=grid-]>* {-ms-flex-preferred-size:0;-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1; float:left;}
-.grid-1>* {width:100%;float:none;}
+.grid {display:flex; display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;-webkit-flex-direction:row;-moz-flex-direction:row;-ms-flex-direction:row;-o-flex-direction:row;flex-direction:row;-webkit-flex-wrap:wrap;-moz-flex-wrap:wrap;-ms-flex-wrap:wrap;-o-flex-wrap:wrap;flex-wrap:wrap;-webkit-align-items:center;-moz-align-items:center;-ms-align-items:center;-o-align-items:center;align-items:center;text-align:center;-webkit-justify-content:space-between;-moz-justify-content:space-between;-ms-justify-content:space-between;-o-justify-content:space-between;justify-content:space-between;}
+.grid:before, .grid:after{ display: block; content: ""; clear: both; float: none; }
+.grid>* {-ms-flex-preferred-size:0;-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1; float:left; }
+.grid-1>* {width:100%; float:none;}
 .grid-2>* {width:50%;}
 .grid-3>* {width:33.333333%;}
 .grid-4>* {width:25%;}
@@ -90,8 +94,9 @@ button:focus{ outline: none; }
 .grid-10>* {width:10%;}
 
 /* 列表 */
-[class*=list-] {display:-webkit-box; display:-ms-flexbox; display:flex; -ms-flex-wrap:wrap; flex-wrap:wrap; list-style:none; padding:0; overflow:hidden;}
-[class*=list-] li {float:left; overflow:hidden; position:relative; -ms-flex-preferred-size:0; -webkit-box-flex:1; -ms-flex-positive:1; flex-grow:1;}
+.list {display:-webkit-box; display:-ms-flexbox; display:flex; -ms-flex-wrap:wrap; flex-wrap:wrap; list-style:none; padding:0; overflow:hidden;}
+.list:before, .list:after{ display: block; content: ""; clear: both; float: none; }
+.list li {float:left; overflow:hidden; position:relative; -ms-flex-preferred-size:0; -webkit-box-flex:1; -ms-flex-positive:1; flex-grow:1;}
 .li-1 li {width:100%; float:none;}
 .li-2 li {width:50%;}
 .li-3 li {width:33.333333%;}
@@ -121,16 +126,51 @@ button:focus{ outline: none; }
 .box, .mask { top:0; left:0; right:0; bottom:0; width:100%; height:100%;}
 .box { position:absolute; z-index:3; }
 .mask { position:fixed; z-index:5; }
-.modal {position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); border-radius:0.25rem; width:calc(100 - 0.5rem); max-width:20rem; z-index:6;}
-.warp { width: 100%; min-width: 65rem; max-width: 81rem; margin: 0 auto; }
+.modal {position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); border-radius:0.25rem; width:calc(100% - 2rem); max-width:30rem; z-index:6;}
+.warp { width: 100%; min-width: 64rem; max-width: 75rem; margin: 0 auto; }
+.warp:before, .warp:after{ display: block; content: ""; clear: both; float: none; }
+.card { background: #fff; border-top: 1px solid rgba(0,0,0,.04); border-radius: .25rem; box-shadow: 0 2px 4px 0 rgba(0,0,0,.12), 0 0 6px 0 rgba(0,0,0,.04); }
+
 
 /* 字体大小 */
-body { font-size: 0.875rem; }
+body { font-size: 1rem; }
 h1,.h1 {font-size: 2.5rem;}
 h2,.h2 {font-size: 2rem;}
 h3,.h3 {font-size: 1.5rem;}
 h4,.h4 {font-size: 1.25rem;}
 h5,.h5 {font-size: 1rem;}
 h6,.h6 {font-size: 0.875rem;}
-p {font-size: 0.875rem; }
 .small { font-size: 0.75rem;}
+
+
+/* 背景 */
+.bg_white { background: white; color: #333; }
+.bg_black { background: #333; color: #999; }
+.bg_gray { background:  #909399; color: #fff; }
+.bg_green { background: #67C23A; color: #fff; }
+.bg_blue { background: #409EFF; color: #fff; }
+.bg_warning { background: #E6A23C; color: #fff; }
+.bg_danger { background: #F56C6C; color: #fff; }
+.bg_info { background: #909399; color: #fff; }
+
+/* 字体颜色 */
+.font_black { color: #333; }
+.font_gray { color: #666; }
+.font_gain_b { color: #999; }
+.font_green { color: #67C23A; }
+.font_blue { color: #409EFF; }
+.font_warning { color: #E6A23C; }
+.font_danger { color: #F56C6C; }
+.font_info { color: #909399; }
+
+body { color: #666; }
+h1,.h1,
+h2,.h2,
+h3,.h3,
+h4,.h4,
+h5,.h5,
+h6,.h6 { color: #333; }
+
+
+/* 常用 */
+.unit { font-style: normal; }
